# Unicode-LineBreak

./: .gitignore  .gitmodules  5.1.0.c  Changes  Changes.REL1  LineBreak.h  LineBreak.xs  MANIFEST  META.json  META.yml  Makefile.PL  Makefile.PL.sombok  README  Todo  _test  perl-Unicode-LineBreak.spec  typemap
c/: 5.1.0.c  5.2.0beta.c  break.c  charprop.c  common.h  gcstring.c  gcstring.h  linebreak.c  linebreak.h  southeastasian.c  strerror.c
data/: Constants.pm.in  EastAsianWidth-5.1.0.custom  EastAsianWidth-5.2.0.custom  EastAsianWidth-5.2.0beta.custom  EastAsianWidth-6.0.0beta.custom  EastAsianWidth.custom  LBCLASSES  LineBreak-5.1.0.custom  LineBreak-5.2.0beta.custom  LineBreak.custom  LineBreak.h.in  Makefile  Rules-5.2.0.txt  Rules-5.2.0beta.txt  SAScripts-5.1.0.txt  SAScripts-5.2.0beta.txt  constants.pl  custom.pl  data.pl  data2pl.pl  lbclasses.pl  linebreak.h.in  makefile  map2pl.pl  rules2pl.pl
debian/: changelog  control  copyright  libunicode-linebreak-perl.docs  watch
lib/POD2/JA/Text/: LineFold.pod
lib/POD2/JA/Unicode/: GCString.pod  LineBreak.pod
lib/Text/: LineFold.pm
lib/Text/LineFold/: JA_JP.pod
lib/Unicode/: GCString.pm  GCString.pod  LineBreak.pm  LineBreak.pod
lib/Unicode/GCString/: JA_JP.pod
lib/Unicode/LineBreak/: 5.1.0.pm  5.2.0beta.pm  Constants.pm  Data.pm  Defaults.pm.sample  JA_JP.pod  NoXS.pm  Rules.pm  Version.pm
linebreak/: 5.2.0.c  5.2.0beta.c  AUTHORS  ChangeLog  Makefile.am  Makefile.in  Makefile.mingw  README  autogen.sh  common.h  config.guess  config.h.in  config.sub  configure  configure.ac  configure.in  liblinebreak.pc.in  linebreak.c  linebreak.h
linebreak-c/: ChangeLog  Makefile.am  Makefile.mingw  README  config.h.in  config.h.mingw  linebreak.pc.in  linebreak.spec.in
linebreak-c/data/: LBCLASSES  LineBreak-5.1.0.custom  Rules-5.1.0.txt  Rules-6.0.0beta.txt  constants.pl  data.pl  makefile
linebreak-c/include/: linebreak_constants.h  linebreak_defs.h
linebreak-c/lib/: 5.1.0.c  5.2.0.c  6.0.0beta.c  Makefile.mingw  break.c  southeastasian.c
linebreak-c/src/: strcasecmp.c
linebreak/data/: EastAsianWidth-6.0.0beta.custom  custom.pl
linebreak/include/: linebreak.h
linebreak/lib/: 5.1.0.c  5.2.0.c  6.0.0beta.c  Makefile.mingw  break.c  charprop.c  gcstring.c  linebreak.c  southeastasian.c
t/: 00GraphemeBreakTest.t  00LineBreakTest.t  01break.t  02hangul.t  03ns.t  04fold.t  05urgent.t  06context.t  07sea.t  08partial.t  09uri.t  10gcstring.t  11format.t  16regex.t  17prop.t  18currency.t  lb.pl  lf.pl  pod.t  t.pl
testin/: ar.out  aristophanes.CharactersMax.out  aristophanes.ColumnsMin.out  aristophanes.force.out  ecclesiazusae.in  ecclesiazusae.out  fr.out  ja-a.in  ja-a.out  ja.format.out  ja.in  ja.out  ru.out  th.al.out  th.in  th.out  uri.nonbreak.out
trunk/: Changes  LineBreak.xs  Makefile.PL  README  ppport.h  typemap
trunk/lib/Unicode/: GCString.pm  GCString.pod  LineBreak.pm  LineBreak.pod
trunk/lib/Unicode/GCString/: JA_JP.pod
trunk/lib/Unicode/LineBreak/: Defaults.pm.sample  JA_JP.pod
trunk/t/: 01break.t  04fold.t  05urgent.t  06context.t  08partial.t  09uri.t  15array.t  lf.pl
trunk/testin/: ja.fixed.out  ja.flowed.out  ja.wrap.out
